fix border gap problem

--- a/frontend/src/component/CustomerCart.module.css
+++ b/frontend/src/component/CustomerCart.module.css
@@ -1,15 +1,16 @@
 body {
-  background: green;
+  background: white;
 }
 .customerStatTable {
   width: 100%;
+  color: black;
 }
 .customerStatTable thead tr > td:nth-child(1),
 .customerStatTable thead tr > td:nth-child(2) {
   /* padding: 1rem; */
 }
 .customerStatBody > tr {
-  border-top: 2px solid white;
+  border-top: 2px solid black;
   border-bottom: 2px solid white;
 }
 .customerStatBody > tr > td:first-child {
